src/objects/PYME001_Servicio_Externo__c.object
<CustomObject>
    <description>Nuevo objeto PYME Servicios con Otros Bancos</description>
    <fields>
        <fullName>MX_PYME_Reporte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporte PyME</label>
        <referenceTo>MX_PyME_Reporte__c</referenceTo>
        <relationshipLabel>Servicios con Otros Bancos</relationshipLabel>
        <relationshipName>Servicios_con_Otros_Bancos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_br_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Servicios con Otros Bancos</relationshipLabel>
        <relationshipName>Servicios_con_Otros_Bancos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_ls_Nombre_del_Banco__c</fullName>
        <description>Nuevo campo para pyme Banco</description>
        <label>Nombre del Banco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actinver</fullName>
                    <default>true</default>
                    <label>Actinver</label>
                </value>
                <value>
                    <fullName>Banamex</fullName>
                </value>
                <value>
                    <fullName>Banca Afirme</fullName>
                </value>
                <value>
                    <fullName>Banca Mifel</fullName>
                </value>
                <value>
                    <fullName>Banco Azteca</fullName>
                </value>
                <value>
                    <fullName>Banco del Bajio</fullName>
                </value>
                <value>
                    <fullName>Banorte/IXE</fullName>
                </value>
                <value>
                    <fullName>BanRegio</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>CI Banco</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>INBURSA</fullName>
                </value>
                <value>
                    <fullName>Intercam</fullName>
                </value>
                <value>
                    <fullName>Monex</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Scotiabank</fullName>
                </value>
                <value>
                    <fullName>Sin Competencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_Servicio_Contratado__c</fullName>
        <description>Nuevo campo Servicio Contratado para pyme</description>
        <label>Servicio Contratado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banca Electrónica</fullName>
                    <default>true</default>
                    <label>Banca Electrónica</label>
                </value>
                <value>
                    <fullName>Nomina</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Tesorería</fullName>
                </value>
                <value>
                    <fullName>TPV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Servicio con Otro Banco</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PYME_ls_Nombre_del_Banco__c</columns>
        <columns>PYME_ls_Servicio_Contratado__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>No. del Servicio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servicios con Otros Bancos</pluralLabel>
    <recordTypes>
        <fullName>PYME_tre_Servicios_Externos</fullName>
        <active>true</active>
        <label>Servicios Externos PyME</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>